--- a/PaymentAPI/PaymentAPI/appsettings.json
+++ b/PaymentAPI/PaymentAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=LAPTOP-MAH3EPJS;Database=PayDetailDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
